# RCP

./: .gitignore  Cargo.toml  README.md  g.txt  g2.txt  g3.txt
cp_core/: Cargo.toml
cp_core/src/: error.rs  lexer.rs  lexical_analyzer.rs  lib.rs  relexer.rs  token.rs
cp_core/src/lexer/: cursor.rs  mod.rs
cp_core/src/parser/: grammar.rs  lr1_parser.rs  mod.rs
cp_view/: Cargo.toml
cp_view/src/: edit_panel.rs  header.rs  info_panel.rs  lib.rs  menu.rs
src/: main.rs
