[package]
name = "cp_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
logos-derive = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
lazy_static = "1.4.0"